<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".SelectAreaActivity">

    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_2xhdpi"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dimen_28dp"
        android:paddingEnd="@dimen/dimen_28dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:fontFamily="@font/opensans_regular"
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp" />

        <TextView
            android:fontFamily="@font/opensans_bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/job_level"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_22sp" />

        <TextView
            android:enabled="false"
            android:visibility="invisible"
            android:fontFamily="@font/opensans_regular"
            android:id="@+id/tvDone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelectJobLevel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        android:paddingStart="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_16dp"
        android:paddingEnd="@dimen/dimen_16dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:scrollbars="none"
        android:splitMotionEvents="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />


</androidx.constraintlayout.widget.ConstraintLayout>