<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context=".SelectAreaActivity">


    <LinearLayout
        android:id="@+id/llJobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_2xhdpi"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dimen_28dp"
            android:paddingEnd="@dimen/dimen_28dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/job_title"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_22sp" />

            <TextView
                android:enabled="false"
                android:visibility="invisible"
                android:id="@+id/tvDone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dimen_2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edSearchJobTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_20dp"
                    android:background="@null"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="@string/search"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#666666"
                    android:textColorHint="#666666"
                    android:textSize="@dimen/dimen_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivSearchJobTitle"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/ivSearchJobTitle"
                    android:layout_width="@dimen/dimen_24dp"
                    android:layout_height="@dimen/dimen_24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:src="@drawable/search_iconxhdpi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoResultFound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:gravity="top|center"
        android:text="@string/no_results_found"
        android:textSize="@dimen/dimen_20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llJobTitle" />

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/rvSelectJobTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_16dp"
        android:paddingEnd="@dimen/dimen_16dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:scrollbars="none"
        android:splitMotionEvents="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llJobTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>