<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/llLogin"
    android:weightSum="1"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@drawable/bg_2xhdpi"
        android:orientation="vertical"
        android:weightSum="1">


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_weight="0.5"
            android:scaleType="fitStart"
            android:src="@drawable/logoxhdpi" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="44dp"
        android:paddingRight="44dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/opensans_regular"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/username"
            android:textColor="@color/textColorSelected"
            android:textSize="@dimen/dimen_14sp" />

        <EditText
            android:inputType="text"
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/opensans_bold"
            android:imeOptions="actionNext"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dimen_16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/opensans_regular"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/password"
            android:textColor="@color/textColorSelected"
            android:textSize="@dimen/dimen_14sp" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/textColorSelected"
            android:fontFamily="@font/opensans_bold"
            android:imeOptions="actionDone"
            android:maxLength="15"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dimen_16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:orientation="horizontal"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:background="@drawable/ic_next_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="@dimen/dimen_22sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4" />


    </LinearLayout>


</LinearLayout>